Adding angular v2.0.0 alpha25

--- a/partials/header.html
+++ b/partials/header.html
@@ -2,6 +2,7 @@
   <a class="btn btn-lg btn-link" ng-class="{selected:isActive('index.html')}" role="button" href="index.html">AngularJS v1.2.20</a>
   <a class="btn btn-lg btn-link" ng-class="{selected:isActive('index2.html')}" role="button" href="index2.html">AngularJS v1.3.9</a>
   <a class="btn btn-lg btn-link" ng-class="{selected:isActive('index3.html')}" role="button" href="index3.html">AngularJS v1.4.0</a>
+  <a class="btn btn-lg btn-link" role="button" href="angular2/dist/index.html">AngularJS v2.0.0-alpha25</a>
 </p>
 
 <p>
@@ -12,6 +13,6 @@
 </p>
 
 <div class="well">
-<div>Render time: {{duration}} ms</div>
+<div>ngRepeat time: {{duration}} ms</div>
 <div>Watchers: {{totalWatchers}}</div>
 </div>
