clean up for angular1 and angular2

--- a/angular1/partials/header.html
+++ b/angular1/partials/header.html
@@ -14,6 +14,6 @@
 </p>
 
 <div class="well">
-<div>ngRepeat time: {{duration}} ms</div>
-<div>Watchers: {{totalWatchers}}</div>
+    <div ng-show="duration">ngRepeat time: {{duration}} ms</div>
+    <div ng-show="totalWatchers">Watchers: {{totalWatchers}}</div>
 </div>
