--- a/angular1/partials/table-one-time-binding.html
+++ b/angular1/partials/table-one-time-binding.html
@@ -2,7 +2,7 @@
     <table class="table">
 		<thead>
 			<tr>
-				<th><input type="checkbox" ng-click="selectAll()"/></th>
+				<th><input type="checkbox" ng-click="selectAll()" ng-model="$parent.selectAllBtn"/></th>
 				<th>Status</th>
 				<th>Name</th>
 				<th>Email</th>
