--- a/angular1/partials/header.html
+++ b/angular1/partials/header.html
@@ -13,7 +13,7 @@
   <a class="btn btn-lg btn-success" role="button" ng-disabled="running" ng-click="run(5000)">5000 records</a>
 </p>
 
-<div class="well">
-    <div ng-show="duration">ngRepeat time: {{duration}} ms</div>
-    <div ng-show="totalWatchers">Watchers: {{totalWatchers}}</div>
+<div class="well well-sm">
+    <div><span className="text-muted">ngRepeat time:</span> {{duration}} ms</div>
+    <div><span className="text-muted">Watchers:</span> {{totalWatchers}}</div>
 </div>
