update headers to correct angular 2 version

--- a/angular1/partials/header.html
+++ b/angular1/partials/header.html
@@ -5,7 +5,7 @@
         v1.3.9</a>
     <a class="btn btn-lg btn-link" ng-class="{selected:isActive('index3.html')}" role="button" href="index3.html">AngularJS
         v1.4.0</a>
-    <a class="btn btn-lg btn-link" role="button" href="../angular2/dist/index.html">AngularJS v2.0.0-alpha25</a>
+    <a class="btn btn-lg btn-link" role="button" href="../angular2/dist/index.html">AngularJS v2.0.0-alpha.26</a>
     <a class="btn btn-lg btn-link" role="button" href="../reactjs/index.html">ReactJS 0.13.0</a>
     <a class="btn btn-lg btn-link" role="button" href="../raw/index.html">HTML DOM</a>
 </p>
